force-app/main/default/objects/Asset/fields/ABN_Tax_Reference_f__c.field-meta.xml
<CustomField>
    <fullName>ABN_Tax_Reference_f__c</fullName>
    <formula>Account.ABN_Tax_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABN / Tax Reference</label>
    <type>Text</type>
</CustomField>