force-app/main/default/objects/Asset/fields/Applied_GST__c.field-meta.xml
<CustomField>
    <fullName>Applied_GST__c</fullName>
    <label>Applied GST (system)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>