force-app/main/default/objects/Asset/fields/Area_Code_f__c.field-meta.xml
<CustomField>
    <fullName>Area_Code_f__c</fullName>
    <formula>LEFT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Contact.Phone,&quot;+&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;), &quot;)&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;), SUBSTITUTE(Country_Code_f__c,&quot;+&quot;,&quot;&quot;),&quot;&quot;), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area Code</label>
    <type>Text</type>
</CustomField>