force-app/main/default/objects/Asset/fields/Asset_Year__c.field-meta.xml
<CustomField>
    <fullName>Asset_Year__c</fullName>
    <description>QAC</description>
    <label>Asset Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>