force-app/main/default/objects/Asset/fields/Batch_Run__c.field-meta.xml
<CustomField>
    <fullName>Batch_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be set to true when batch Runs and reset to false once completed</description>
    <label>Batch Run [System]</label>
    <type>Checkbox</type>
</CustomField>