force-app/main/default/objects/Asset/fields/Below_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Below_Threshold__c</fullName>
    <formula>IF(RecordType.DeveloperName =&apos;Public_Scheme&apos; &amp;&amp; Scheme_Active_Member_Count__c &lt;  Scheme_Threshold_Limit__c &amp;&amp;  Override_Threshold__c == False,TRUE,FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Below Threshold</label>
    <type>Checkbox</type>
</CustomField>