force-app/main/default/objects/Asset/fields/Billing_Address_f__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_f__c</fullName>
    <formula>Account.BillingStreet &amp;&quot; &quot;&amp; Account.BillingCity &amp;&quot; &quot;&amp;Account.BillingState &amp;&quot; &quot;&amp;Account.BillingCountry &amp;&quot; &quot; &amp; Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>