force-app/main/default/objects/Asset/fields/Business_Phone_f__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone_f__c</fullName>
    <formula>Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Phone</label>
    <type>Text</type>
</CustomField>