force-app/main/default/objects/Asset/fields/Convert_to_Retail_Date__c.field-meta.xml
<CustomField>
    <fullName>Convert_to_Retail_Date__c</fullName>
    <description>Date in Which Asset Scheme will be set to retail.</description>
    <formula>IF(RecordType.DeveloperName == &apos;Public_Scheme&apos; &amp;&amp; NOT(ISNULL(Below_Threshold_Start_Date__c)), Below_Threshold_Start_Date__c +Value( $Label.Threshold_Time_Limit ), Null)</formula>
    <label>Convert to Retail Date</label>
    <type>Date</type>
</CustomField>