force-app/main/default/objects/Asset/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>