force-app/main/default/objects/Asset/fields/Day_Below_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Day_Below_Threshold__c</fullName>
    <formula>TODAY()- Below_Threshold_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Below Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>