force-app/main/default/objects/Asset/fields/Email_f__c.field-meta.xml
<CustomField>
    <fullName>Email_f__c</fullName>
    <formula>Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>