force-app/main/default/objects/Asset/fields/GDS__c.field-meta.xml
<CustomField>
    <fullName>GDS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GDS</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <errorMessage>GDS should be Active and Channel Enabled or Farelogix Enabled</errorMessage>
        <filterItems>
            <field>GDS_Reference__c.Channel_Enabled__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>GDS_Reference__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>GDS_Reference__c.FareLogix_Indicator__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Add only Channel Enabled GDS OR Farelogix Enabled GDS</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GDS_Reference__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>