force-app/main/default/objects/Asset/fields/GDS_Name__c.field-meta.xml
<CustomField>
    <fullName>GDS_Name__c</fullName>
    <formula>GDS__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GDS Name</label>
    <type>Text</type>
</CustomField>