force-app/main/default/objects/Asset/fields/Ifly_Notification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Ifly_Notification_Date_Time__c</fullName>
    <description>Captures the Ifly Notification Time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Ifly Notification Date Time</label>
    <type>DateTime</type>
</CustomField>