force-app/main/default/objects/Asset/fields/Invitation_Date__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invitation Date</label>
    <type>Date</type>
</CustomField>