force-app/main/default/objects/Asset/fields/Invitation_Type__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Type__c</fullName>
    <label>Invitation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Agreement</fullName>
            </value>
            <value>
                <fullName>EOI</fullName>
                <label>Independent/EOI</label>
            </value>
            <value>
                <fullName>PNDC Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>