force-app/main/default/objects/Asset/fields/is_Channel_Account__c.field-meta.xml
<CustomField>
    <fullName>is_Channel_Account__c</fullName>
    <formula>Account.Channel_Member__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Channel Account?</label>
    <type>Checkbox</type>
</CustomField>