force-app/main/default/objects/Asset/fields/Join_Fee_Gross__c.field-meta.xml
<CustomField>
    <fullName>Join_Fee_Gross__c</fullName>
    <label>Join Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>