force-app/main/default/objects/Asset/fields/Join_Fee_Points__c.field-meta.xml
<CustomField>
    <fullName>Join_Fee_Points__c</fullName>
    <label>Join Fee Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>