force-app/main/default/objects/Asset/fields/Join_Fee_Points_Example__c.field-meta.xml
<CustomField>
    <fullName>Join_Fee_Points_Example__c</fullName>
    <formula>IF(ISNULL(Qantas_Club_Join_Discount__c),   Join_Fee_Points_Published__c - (Join_Fee_Points_Published__c * Qantas_Club_Join_Discount_Offer__c), Join_Fee_Points_Published__c - (Join_Fee_Points_Published__c * Qantas_Club_Join_Discount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Join Fee Points (Example)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>