force-app/main/default/objects/Asset/fields/Kit_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Kit_Recipient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kit Recipient</label>
    <type>Checkbox</type>
</CustomField>