force-app/main/default/objects/Asset/fields/Last_Name_f__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_f__c</fullName>
    <formula>Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>