force-app/main/default/objects/Asset/fields/Mailing_Address_f__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_f__c</fullName>
    <formula>Contact.MailingStreet &amp;&quot; &quot;&amp; Contact.MailingCity &amp;&quot; &quot;&amp;Contact.MailingState &amp;&quot; &quot;&amp;Contact.MailingCountry &amp;&quot; &quot; &amp; Contact.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>