force-app/main/default/objects/Asset/fields/Mailing_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Name_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name that will be used on items mailed to the Coordinator. This automatically populates as the Key Coordinator’s name but can be manually updated if the customer requests, eg if they have a preferred name or something generic like &quot;Reception&quot;</inlineHelpText>
    <label>Mailing Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>