force-app/main/default/objects/Asset/fields/Mailing_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Name_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Only use this line as an extension of the mailing name line above if all the characters don’t fit. Do not use this to insert a second, separate mailing name as it will disrupt the automated mailing processes.</inlineHelpText>
    <label>Mailing Name Extra Line</label>
    <length>20</length>
    <type>Text</type>
</CustomField>