force-app/main/default/objects/Asset/fields/Mailing_State_f__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State_f__c</fullName>
    <formula>Contact.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing State</label>
    <type>Text</type>
</CustomField>