force-app/main/default/objects/Asset/fields/Mailing_Street_f__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street_f__c</fullName>
    <formula>Contact.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Street</label>
    <type>Text</type>
</CustomField>