force-app/main/default/objects/Asset/fields/Member_Fee_Discount__c.field-meta.xml
<CustomField>
    <fullName>Member_Fee_Discount__c</fullName>
    <label>Qantas Club Member Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>