force-app/main/default/objects/Asset/fields/Mobile_Country_Code_f__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Country_Code_f__c</fullName>
    <formula>&apos;+&apos;&amp;CASE(Mailing_Country_f__c ,&apos;AU&apos;,&apos;61&apos;,&apos;NZ&apos;,&apos;64&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Country Code</label>
    <type>Text</type>
</CustomField>