force-app/main/default/objects/Asset/fields/Move_to_Public_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Move_to_Public_Scheme__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFSCHEMES-22 --&gt; Convert to Public scheme, during the renewal process.</description>
    <label>Move to Public Scheme</label>
    <type>Checkbox</type>
</CustomField>