force-app/main/default/objects/Asset/fields/Original_Scheme_End_Date_f__c.field-meta.xml
<CustomField>
    <fullName>Original_Scheme_End_Date_f__c</fullName>
    <formula>Contract__r.Original_Contract_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Scheme End Date</label>
    <type>Date</type>
</CustomField>