force-app/main/default/objects/Asset/fields/Override_Fees_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Override_Fees_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the User to Override the Member Fees Discount</description>
    <label>Override Fees Calculation</label>
    <type>Checkbox</type>
</CustomField>