force-app/main/default/objects/Asset/fields/Override_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Override_Threshold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Threshold</label>
    <type>Checkbox</type>
</CustomField>