force-app/main/default/objects/Asset/fields/Override_Waiver_Discounts_Active__c.field-meta.xml
<CustomField>
    <fullName>Override_Waiver_Discounts_Active__c</fullName>
    <formula>IF(Waiver_Start_Date__c &lt;= Today() &amp;&amp;  Waiver_End_Date__c &gt;= Today(), true, false)</formula>
    <inlineHelpText>Checked if date today falls within override / waiver start and end dates</inlineHelpText>
    <label>Override / Waiver Discounts Active</label>
    <type>Checkbox</type>
</CustomField>