force-app/main/default/objects/Asset/fields/Phone_f__c.field-meta.xml
<CustomField>
    <fullName>Phone_f__c</fullName>
    <formula>Contact.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>