force-app/main/default/objects/Asset/fields/Points_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Points_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Points End Date</label>
    <type>Date</type>
</CustomField>