force-app/main/default/objects/Asset/fields/Points_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Points_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Points Start Date</label>
    <type>Date</type>
</CustomField>