force-app/main/default/objects/Asset/fields/Premium_Channel_Status__c.field-meta.xml
<CustomField>
    <fullName>Premium_Channel_Status__c</fullName>
    <label>Premium NDC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>GDS Pending</fullName>
            </value>
            <value>
                <fullName>GDS Rejected</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>GDS Disable</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>