force-app/main/default/objects/Asset/fields/Public_Scheme_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Public_Scheme_End_Date__c</fullName>
    <defaultValue>DATE( IF(MONTH(TODAY()-1)&gt;MONTH(TODAY()), YEAR(TODAY())+2, YEAR(TODAY())+3), IF(DAY(TODAY()-1)&gt;DAY(TODAY()), MONTH(TODAY())-1, MONTH(TODAY())), DAY(TODAY()-1))</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Public Scheme End Date</label>
    <type>Date</type>
</CustomField>