force-app/main/default/objects/Asset/fields/Public_Scheme_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Public_Scheme_Start_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Public Scheme Start Date</label>
    <type>Date</type>
</CustomField>