force-app/main/default/objects/Asset/fields/Qantas_Club_Join_Discount__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Club_Join_Discount__c</fullName>
    <label>Qantas Club Join Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>