force-app/main/default/objects/Asset/fields/Qantas_Club_Join_Fee_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Club_Join_Fee_Waiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qantas Club Join Fee Waiver</label>
    <type>Checkbox</type>
</CustomField>