force-app/main/default/objects/Asset/fields/Qantas_Club_Member_Discount_Offer__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Club_Member_Discount_Offer__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT(Contract__r.Qantas_Club_Discount_Offer__c))),
VALUE(SUBSTITUTE(TEXT(Contract__r.Qantas_Club_Discount_Offer__c), &quot;%&quot;,&quot;&quot;))/100,0)</formula>
    <label>Qantas Club Member Discount Offer</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>