force-app/main/default/objects/Asset/fields/QCI_f__c.field-meta.xml
<CustomField>
    <fullName>QCI_f__c</fullName>
    <formula>Account.Qantas_Corporate_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QCI</label>
    <type>Text</type>
</CustomField>