force-app/main/default/objects/Asset/fields/QDP_Portal_Agreement__c.field-meta.xml
<CustomField>
    <fullName>QDP_Portal_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QDP Portal Agreement</label>
    <type>Checkbox</type>
</CustomField>