force-app/main/default/objects/Asset/fields/QDP_Portal_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>QDP_Portal_Agreement_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QDP Portal Agreement Date</label>
    <type>Date</type>
</CustomField>