force-app/main/default/objects/Asset/fields/Scheme_Active_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Active_Member_Count__c</fullName>
    <label>Scheme Active Member Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>