force-app/main/default/objects/Asset/fields/Scheme_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Cost_Center__c</fullName>
    <defaultValue>IF( $RecordType.Name == &apos;Public Scheme&apos;,&apos;Public&apos;,&apos;&apos;)</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use Scheme Cost Center as 176275 for AU Schemes linked to Corporate Deals</inlineHelpText>
    <label>Scheme Cost Center</label>
    <length>6</length>
    <type>Text</type>
</CustomField>