force-app/main/default/objects/Asset/fields/Scheme_Currency__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Currency__c</fullName>
    <label>Scheme Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUD</fullName>
                <default>true</default>
                <label>AUD</label>
            </value>
            <value>
                <fullName>NZD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>