force-app/main/default/objects/Asset/fields/Scheme_Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Discount_Type__c</fullName>
    <description>Only Coordinator, Individual and Retail</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheme Discount Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>