force-app/main/default/objects/Asset/fields/Scheme_End_Date_f__c.field-meta.xml
<CustomField>
    <fullName>Scheme_End_Date_f__c</fullName>
    <formula>IF(
RecordType.DeveloperName == &apos;Corporate_Scheme&apos;,
Contract__r.Contract_End_Date__c,
IF(
RecordType.DeveloperName == &apos;Public_Scheme&apos;,
Public_Scheme_End_Date__c,
null
)
)</formula>
    <label>Scheme End Date</label>
    <type>Date</type>
</CustomField>