force-app/main/default/objects/Asset/fields/Scheme_Extended_f__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Extended_f__c</fullName>
    <formula>Contract__r.Extended__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheme Extended</label>
    <type>Checkbox</type>
</CustomField>