force-app/main/default/objects/Asset/fields/Scheme_Number__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Number__c</fullName>
    <description>Scheme Number that is generated by Salesforce and passed (via outbound message) to iFly Loyalty system to create scheme and scheme managed members</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Scheme Number</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>