force-app/main/default/objects/Asset/fields/Scheme_Path__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Path__c</fullName>
    <description>Asset Progress Bar</description>
    <formula>IMAGE(
CASE(Status,
&quot;Draft&quot;, &quot;/servlet/servlet.FileDownload?file=015N0000000f1Hp&quot;,
&quot;Complete – Pending Activation&quot;, &quot;/servlet/servlet.FileDownload?file=015N0000000f1Hz&quot;,
&quot;Active&quot;, &quot;/servlet/servlet.FileDownload?file=015N0000000f1I9&quot;,
&quot;Inactive&quot;, &quot;/servlet/servlet.FileDownload?file=015N0000000f1IJ&quot;,
&quot;&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheme Path</label>
    <type>Text</type>
</CustomField>