force-app/main/default/objects/Asset/fields/Scheme_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheme Remarks</label>
    <type>TextArea</type>
</CustomField>