force-app/main/default/objects/Asset/fields/Scheme_Start_Date_f__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Start_Date_f__c</fullName>
    <description>Scheme Start Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheme Start Date</label>
    <type>Date</type>
</CustomField>