force-app/main/default/objects/Asset/fields/Scheme_Threshold_Limit__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Threshold_Limit__c</fullName>
    <formula>IF( Scheme_Age__c  == &apos;1&apos;, VALUE($Label.Threshold_Limit_First_Year) ,
IF(Scheme_Age__c == &apos;2&apos;, VALUE($Label.Threshold_Limit_Second_Year) ,
IF(Scheme_Age__c == &apos;3&apos; || Scheme_Age__c == &apos;3+&apos;, VALUE($Label.Threshold_Limit_ThreePlus_Year) ,NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheme Threshold Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>