force-app/main/default/objects/Asset/fields/SchemeConversionDate__c.field-meta.xml
<CustomField>
    <fullName>SchemeConversionDate__c</fullName>
    <description>SFSCHEMES-22, This will store the date in which the recordtype is changed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheme Conversion Date</label>
    <type>Date</type>
</CustomField>