force-app/main/default/objects/Asset/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Secondary Assets</relationshipLabel>
    <relationshipName>SecondaryAssets</relationshipName>
    <type>Lookup</type>
</CustomField>