force-app/main/default/objects/Asset/fields/Secondary_Email_f__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email_f__c</fullName>
    <formula>Secondary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Email</label>
    <type>Text</type>
</CustomField>