force-app/main/default/objects/Asset/fields/Secondary_Mailing_Address_f__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mailing_Address_f__c</fullName>
    <formula>Secondary_Contact__r.MailingStreet &amp;&quot; &quot;&amp; Secondary_Contact__r.MailingCity &amp;&quot; &quot;&amp;Secondary_Contact__r.MailingState &amp;&quot; &quot;&amp;Secondary_Contact__r.MailingCountry &amp;&quot; &quot; &amp; Secondary_Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Mailing Address</label>
    <type>Text</type>
</CustomField>