force-app/main/default/objects/Asset/fields/Secondary_Mobile_f__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mobile_f__c</fullName>
    <formula>Secondary_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Mobile</label>
    <type>Text</type>
</CustomField>