force-app/main/default/objects/Asset/fields/Title_f__c.field-meta.xml
<CustomField>
    <fullName>Title_f__c</fullName>
    <formula>Contact.Job_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>