force-app/main/default/objects/Asset/fields/Total_Acquired_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Acquired_Credits__c</fullName>
    <defaultValue>(0)</defaultValue>
    <description>QAC</description>
    <label>Total Acquired Credits</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>