force-app/main/default/objects/Asset/fields/Total_Outstanding_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_Credits__c</fullName>
    <description>QAC</description>
    <formula>Total_Acquired_Credits__c  -  Total_Consumed_Credits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Outstanding Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>