force-app/main/default/objects/Asset/fields/Waiver_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Override / Waiver Start Date</label>
    <type>Date</type>
</CustomField>