force-app/main/default/objects/Asset/fields/X1_Year_Membership_Fee_Gross__c.field-meta.xml
<CustomField>
    <fullName>X1_Year_Membership_Fee_Gross__c</fullName>
    <label>1 Yr M&apos;ship Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>