force-app/main/default/objects/Asset/fields/X1_Year_Membership_Fee_GST__c.field-meta.xml
<CustomField>
    <fullName>X1_Year_Membership_Fee_GST__c</fullName>
    <label>1 Year Membership Fee GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>