force-app/main/default/objects/Asset/fields/X1_Year_Membership_Fee_Points_Published__c.field-meta.xml
<CustomField>
    <fullName>X1_Year_Membership_Fee_Points_Published__c</fullName>
    <label>Published 1 Yr M&apos;ship Fee Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>