force-app/main/default/objects/Asset/fields/X1_Year_Membership_Renewal_Fee__c.field-meta.xml
<CustomField>
    <fullName>X1_Year_Membership_Renewal_Fee__c</fullName>
    <description>Used in AssetTriggerHandler</description>
    <label>1 Yr M&apos;ship Renewal Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>